--- a/button.html
+++ b/button.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Table Scraper</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 10px;
-        }
-        button {
-            padding: 10px;
-            font-size: 14px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
-    <button id="download-table">Download Table</button>
+    <div class="m-2">
+        <a href="https://www.buymeacoffee.com/rbajaj.97" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+    </div>
+    <div>
+        <button type="button" class="btn btn-success m-2" id="download-table">
+        <i class="icon-download"></i>
+        Download Table
+        </button>
+    </div>
+    <div><button type="button" id="add-download-buttons">Add Buttons To Tables</button></div>
     <script src="popup.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
