--- a/extention.html
+++ b/extention.html
@@ -49,7 +49,7 @@
         </div>
         <div class="text-center mb-3">
             <button type="button" class="btn btn-success animated-button" id="download-table">
-                <i class="bi bi-download"></i> Download All Table
+                <i class="bi bi-download"></i> Download All Tables
             </button>
         </div>
         <div class="text-center">
