--- a/extention.html
+++ b/extention.html
@@ -52,9 +52,14 @@
                 <i class="bi bi-download"></i> Download All Tables
             </button>
         </div>
-        <div class="text-center">
+        <div class="text-center mb-3">
             <button type="button" class="btn btn-primary animated-button" id="add-download-buttons">
                 Add Buttons To Tables
+            </button>
+        </div>
+        <div class="text-center mb-3">
+            <button type="button" class="btn btn-danger animated-button" id="remove-download-buttons">
+                Remove Buttons From Tables
             </button>
         </div>
     </div>
