--- a/extention.html
+++ b/extention.html
@@ -6,6 +6,7 @@
     <title>Sniper Table Scraper</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -51,22 +52,24 @@
             <button 
                 title="Download all tables of current page in single click." 
                 type="button" 
-                class="btn btn-success animated-button" 
+                class="btn btn-primary animated-button" 
                 id="download-table"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="left"
             >
-                <i class="bi bi-download"></i> Download All Tables
+                <i class="bi bi-download"></i> 
+                Download All
             </button>
             <button 
                 title="Add download buttons to each tables of current page." 
                 type="button" 
-                class="btn btn-primary animated-button" 
+                class="btn btn-success animated-button" 
                 id="add-download-buttons"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="left"
             >
-                Add Buttons To Tables
+                <i class="bi bi-plus"></i>
+                Add Buttons
             </button>
             <button 
                 title="Remove download buttons from each tables of current page." 
@@ -76,8 +79,13 @@
                 data-bs-toggle="tooltip" 
                 data-bs-placement="left"
             >
-                Remove Buttons From Tables
+                <i class="bi bi-dash"></i>
+                Remove Buttons
             </button>
+            <div class="text-info">
+                <i class="bi bi-info-circle text-info fs-4 me-2"></i>
+                hover on buttons for more info
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
