--- a/extention.html
+++ b/extention.html
@@ -82,6 +82,17 @@
                 <i class="bi bi-dash"></i>
                 Remove Buttons
             </button>
+            <button 
+                title="Remove extention injected layout changes which is breaking the page." 
+                type="button" 
+                class="btn btn-warning animated-button" 
+                id="remove-bootstrap-changes"
+                data-bs-toggle="tooltip" 
+                data-bs-placement="left"
+            >
+                <i class="bi bi-arrow-counterclockwise"></i>
+                Revert Layout
+            </button>
             <div class="text-info">
                 <i class="bi bi-info-circle text-info fs-4 me-2"></i>
                 hover on buttons for more info
